[project]
name = "isayhey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "cowsay>=6.1",
]

[project.scripts]
isayhey = "isayhey:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
